# RD-Script

./: .gitignore  AST_structure.md  CMakeLists.txt  CMakePresets.json  CODING_GUIDELINES.md  README.md  Test.rd  USAGE.md  main.cpp  rd.bat  rd.sh
Documentation/Cpp_documentation/: AS_CAST.md  CODING_GUIDELINES.md  MEMORY_MANAGEMENT_IN_RD_SCRIPT.md
Documentation/Rd script/: AST_structure.md  RD_SCRIPT_USAGE.md
include/: AST.h  ASTContext.h  ErrorHandling.h  Interpreter.h  Lexer.h  MemoryPool.h  Token.h  parser.h
include/rubberduck/: AST.h  ASTContext.h  ErrorHandling.h  Interpreter.h  Lexer.h  MemoryPool.h  Parser.h  Token.h
src/: main.cpp
src/core/: ASTContext.cpp  ErrorHandling.cpp  Lexer.cpp
src/interpreter/: Interpreter.cpp
src/parser/: Parser.cpp
templates/: auto_display_example.rd  control_structures.rd  data_structures.rd  functions.rd  hello_world.rd  simple_example.rd  static_typing.rd  system_automation.rd  variables.rd
